--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.1.0",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
   },
